# sleeper-ff-tool

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: refresh.yml
apps/: README.md  draft_app.py  season_app.py
data_cache/: README.md  backtest.db  season.db
data_cache/frozen/: projections_season_2026.json
docs/: 2026_SETUP.md  PLAN.md  PROGRESS.md
docs/plans/: data-collection.md
scripts/: backtest.py  backtest_2025.py  draft_sim.py  freeze_projections.py  make_fixture.py  optimize_lineup.py  refresh_data.py  season_sim.py  trade_finder.py  validate_custom.py  waiver_report.py  win_prob.py
src/analysis/: __init__.py  backtest.py  snapshot.py  team.py  trades.py
src/data/: __init__.py  frozen.py  ids.py  nflverse.py
src/draft/: __init__.py  grade.py  roster.py  snake.py  vor.py
src/draftsim/: __init__.py  bots.py  distributions.py  engine.py  inputs.py  lineup.py  report.py  strategy.py
src/optimizer/: __init__.py  inputs.py  lineup.py  startsit.py  winprob.py
src/projections/: __init__.py  board.py
src/scoring/: __init__.py  engine.py  standard.py
src/seasonsim/: __init__.py  distributions.py  engine.py  inputs.py  lineup.py  report.py  schedule.py
src/sleeper/: __init__.py  client.py  config.py  http.py
src/waivers/: __init__.py  handcuffs.py  inputs.py  league.py  priority.py  sos.py  stash.py  streaming.py  usage.py
tests/: test_analysis.py  test_audit_fixes.py  test_draft.py  test_draftsim.py  test_optimizer.py  test_scoring_engine.py  test_scoring_mechanics.py  test_seasonsim.py  test_streaming.py  test_trades.py  test_waivers.py  test_winprob.py
tests/fixtures/: projections_2025_w1_skill.json
