[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sleeper-ff-tool"
version = "0.0.0"
description = "Personal, read-only tooling for one Sleeper redraft league: custom re-scoring, draft, lineup, and waiver decisions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "requests-cache>=1.2",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "nflreadpy>=0.1",
    "pulp>=2.8",
    "streamlit>=1.40",
    "polars>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

# src/ layout: each subdirectory (sleeper, scoring, data, ...) is its own
# top-level importable package.
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "apps"]

# Some hosts (e.g. Streamlit Community Cloud) install from this file with Poetry/uv rather than
# setuptools. We use a src/ layout with setuptools (above); tell Poetry/uv NOT to build this repo
# as a package -- consumers only need the declared dependencies. Local dev and the GitHub Actions
# refresh use `pip install -e .` (setuptools), which ignores these tool tables. The hosted dashboard
# pulls its (smaller) dependency set from requirements.txt instead.
[tool.poetry]
package-mode = false

[tool.uv]
package = false
